--- a/src/components/ProductItemDetails/index.css
+++ b/src/components/ProductItemDetails/index.css
@@ -1,16 +1,16 @@
 /* Write your CSS here */
-
 .product-item-details-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 50px;
 }
 
 .product-details-view {
   display: flex;
   flex-direction: column;
-  width: 35%;
-  max-width: 300px;
+  width: 40%;
+  max-width: 350px;
 }
 
 .product-details-container {
@@ -19,15 +19,14 @@
 }
 
 .product-image {
-  height: 200px;
-  width: 200px;
+  height: 300px;
+  width: 300px;
   border-radius: 10px;
 }
 
 .product {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .product-title {
@@ -53,22 +52,32 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
+  align-self: center;
   background-color: blue;
-  line-height: 1;
-  width: 50px;
-  padding: 3px;
+  line-height: 1.5;
+  width: 65px;
+  margin: 0px;
+  margin-right: 13px;
+  padding: 5px;
 }
 
 .rating {
   color: #ffffff;
   font-family: 'Roboto';
-  font-size: 10px;
+  align-self: center;
+  font-size: 15px;
   font-weight: 600;
+  padding: 0px;
+  margin: 0px;
+  padding-right: 3px;
 }
 
 .star-img {
-  height: 10px;
-  width: 10px;
+  align-self: center;
+  height: 18px;
+  width: 18px;
+  margin: 0px;
 }
 
 .reviews-count {
@@ -81,14 +90,17 @@
 .product-description {
   color: #616e7c;
   font-family: 'Roboto';
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 600;
+  margin: 0px;
+  margin-bottom: 20px;
 }
 
 .label-value-container {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin: 0px;
 }
 
 .label {
@@ -96,12 +108,18 @@
   font-family: 'Roboto';
   font-size: 20px;
   font-weight: 600;
+  padding-right: 7px;
+  margin: 0px;
+  margin-bottom: 20px;
 }
 .value {
   color: #616e7c;
   font-family: 'Roboto';
   font-size: 20px;
   font-weight: 600;
+  padding-right: 7px;
+  margin: 0px;
+  margin-bottom: 20px;
 }
 
 .quantity-container {
@@ -115,11 +133,12 @@
   border: none;
   outline: none;
   cursor: pointer;
+  margin-right: 20px;
 }
 
 .icon {
-  height: 10px;
-  width: 10px;
+  height: 20px;
+  width: 20px;
 }
 
 .quantity {
@@ -127,31 +146,41 @@
   font-family: 'Roboto';
   font-size: 20px;
   font-weight: 600;
+  margin-right: 20px;
 }
 
+.line {
+  width: 100%;
+  border: 1px solid #cbced2;
+}
 .add-btn {
   background-color: #3b82f6;
   border-width: 0px;
-  line-height: 1.5;
-  width: 110px;
+  line-height: 2;
+  width: 150px;
   color: #ffffff;
   font-family: 'Roboto';
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
+  padding: 5px;
   border-radius: 6px;
+  margin-bottom: 20px;
 }
 
 .side-heading {
   color: #475569;
   font-family: 'Roboto';
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 700;
+  margin: 0px;
+  margin-top: 20px;
 }
 .similar-products-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  padding-left: 0px;
 }
 
 .product-failure-container {
@@ -159,27 +188,82 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  align-self: center;
+  margin-top: 150px;
 }
 .failure-image {
-  height: 250px;
-  width: 250px;
+  height: 180px;
+  width: 280px;
 }
 
 .failure-heading {
   color: #171f46;
   font-family: 'Roboto';
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
+  margin-top: 10px;
 }
 
 .button {
   background-color: #3b82f6;
   border-width: 0px;
   line-height: 1.5;
-  width: 110px;
+  width: 180px;
   color: #ffffff;
   font-family: 'Roboto';
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
+  padding: 6px;
   border-radius: 6px;
+}
+
+@media screen and (min-width: 768px) {
+  .product-item-details-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 50px;
+  }
+  .product-details-view {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    margin-left: 300px;
+  }
+  .product-details-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    min-height: 100vh;
+    max-width: 1200px;
+    margin: 0px;
+    padding: 0px;
+  }
+  .product-image {
+    height: 650px;
+    width: 500px;
+    border-radius: 15px;
+    margin-right: 30px;
+  }
+  .product {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    padding-right: 0px;
+    margin: 0px;
+    width: 100%;
+    max-width: 1000px;
+    margin-right: 0px;
+  }
+  .product-title {
+    font-size: 40px;
+    margin: 0px;
+    margin-right: 0px;
+    padding-right: 0px;
+  }
+  .similar-products-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
